# pure-sorcerer

./: default.nix  pure-sorcerer.cabal  sorcerer.cabal
src/: Sorcerer.hs
src/Pure/: Sorcerer.hs
src/Pure/Sorcerer/: Aggregable.hs  Aggregate.hs  Aggregator.hs  Dispatcher.hs  JSON.hs  Log.hs  Manager.hs  Queue.hs  Sorcery.hs  Streamable.hs
