name:              pure-sorcerer
version:           0.8.0.0
homepage:          purehs.org/doc/pure-sorcerer
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-sorcerer.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-elm
    , pure-json
    , bytestring
    , directory
    , filepath
    , hashable
    , containers
    , aeson
    , unix


  exposed-modules:
    Sorcerer

  default-language: Haskell2010
