name:              pure-sorcerer
version:           0.8.0.0
homepage:          purehs.org/doc/pure-sorcerer
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-sorcerer.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-elm
    , pure-json
    , pure-time
    , pure-txt
    , bytestring
    , directory
    , filepath
    , hashable
    , containers
    , aeson
    , unix
    , unix-bytestring

  exposed-modules:
    Pure.Sorcerer
    Pure.Sorcerer.Aggregable
    Pure.Sorcerer.Aggregate
    Pure.Sorcerer.Aggregator
    Pure.Sorcerer.Dispatcher
    Pure.Sorcerer.JSON
    Pure.Sorcerer.Log
    Pure.Sorcerer.Manager
    Pure.Sorcerer.Queue
    Pure.Sorcerer.Streamable
    Pure.Sorcerer.Sorcery

  default-language: Haskell2010

  default-extensions:
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    UndecidableInstances
    DeriveGeneric
    DeriveAnyClass
    FlexibleInstances
    TemplateHaskell
    AllowAmbiguousTypes
    RankNTypes
    DataKinds
    PartialTypeSignatures
    TypeApplications
    ScopedTypeVariables
    DuplicateRecordFields
    StandaloneDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RecordWildCards
    PatternSynonyms
    BlockArguments
    LambdaCase
    CPP
    DerivingVia
    OverloadedStrings
    DefaultSignatures
    TypeOperators
    InstanceSigs
    ExistentialQuantification
    RoleAnnotations
    FunctionalDependencies
    ViewPatterns
    BangPatterns
    ConstraintKinds