name:              sorcerer
version:           0.7.0.0
synopsis:          
homepage:          
author:            Sean Mackenzie
maintainer:        sean@grump.ly
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:
      src

  build-depends:
      base >=4.8
    , pure-elm >= 0.7 && < 1
    , bytestring
    , directory
    , filepath
    , hashable
    , containers
    , aeson


  exposed-modules:
    Sorcerer

  default-language: Haskell2010
